// Licensed to Elasticsearch B.V. under one or more contributor 
// license agreements. See the NOTICE file distributed with     
// this work for additional information regarding copyright     
// ownership. Elasticsearch B.V. licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may     
// not use this file except in compliance with the License.     
// You may obtain a copy of the License at                      
//                                                              
//     http://www.apache.org/licenses/LICENSE-2.0               
//                                                              
// Unless required by applicable law or agreed to in writing,   
// software distributed under the License is distributed on an  
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY       
// KIND, either express or implied.  See the License for the    
// specific language governing permissions and limitations      
// under the License.                                           

syntax = "proto3";

package elastic.apm.model;

option go_package = "github.com/elastic/apm-server/model/modelpb";

message Labels {
  map<string, LabelValue> labels = 1;
}

// LabelValue holds a label value.
message LabelValue {
  oneof value {
    string string_value = 1;
    bool bool_value = 2;
    int64 int64_value = 3;
    double double_value = 4;
  };
}
